Refactor card-1 heading for improved styling and readability; adjust font weights and add italic style to spans

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <article class="container">
         <section class="cards card-1">
-            <h3 class="head">Social Media <span>10x</span> Faster with AI</h3>
+            <h3 class="head">Social Media <span class="ten">10x</span> <span class="fast">Faster</span> with AI</h3>
             <img src="assets/images/illustration-five-stars.webp" alt="five stars" class="stars">
             <p class="desc">Over 4,000 5-star reviews</p>
         </section>
